# flexcribe

./: LICENSE  README.md  app_service.py  audio_recorder.py  audio_transcriber.py  file_manager.py  main.py  pyproject.toml  ui.py
